--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -19,8 +19,8 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: pip install -r src/requirements.txt
-    # - name: Check linting
-    #   working-directory: src
-    #   run: ruff check .
+    - name: Check linting
+      working-directory: src
+      run: ruff check .
     - name: Test with pytest
       run: pytest -q src/tests.py
